# ngvm

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: code.rs  constant.rs  error.rs  lib.rs  meta.rs  opcodes.rs  pool.rs  refs.rs  stack_data.rs  stack_value.rs  types.rs  vm.rs
src/code/: chunk.rs  mod.rs  refs.rs
src/decoder/: decode_result.rs  mod.rs  model.rs  tags.rs
src/decoder/handlers/: functions.rs  mod.rs
src/interpreter/: mod.rs  stack_tracer.rs
src/interpreter/handlers/: array.rs  functions.rs  jumps.rs  load.rs  memory.rs  mod.rs  stack.rs
src/interpreter/handlers/alu/: bool_ops.rs  cmp_ops.rs  f_ops.rs  i_ops.rs  logic_ops.rs  mod.rs  shifts.rs  u_ops.rs
src/interpreter/handlers/math/: f_ops.rs  i_ops.rs  mod.rs  u_ops.rs
src/model/: mod.rs  refs.rs
src/operations/: blankets.rs  markers.rs  mod.rs
src/operations/blankets/: bool.rs  checked.rs  logical.rs  mod.rs  shifts.rs
src/primitives/: array.rs  mod.rs
src/stack/: data.rs  metadata.rs  mod.rs  value.rs
src/types/: mod.rs  pointed.rs  primitive.rs
src/types/checker/: mod.rs  pointed.rs  primitive.rs  tags.rs
src/vm/: lock.rs  mod.rs  refs.rs
tests/: type_checker.rs
