[package]
name = "ngvm"
version = "0.1.0"
authors = ["hunter04d <hunter04d@gmail.com>"]
edition = "2018"

default-run = "main"
[profile.release]
lto = true

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
smallvec = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
ron = "0.6"
bincode = "1.2.1"
flate2 = "1.0"

[dev-dependencies]
pretty_assertions = "0.6"
